--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -3,34 +3,38 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page 3</title>
-  <link rel="stylesheet" href="./css/2-snackbar.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="./css/styles.css" />
+  <title>Document</title>
 </head>
 
 <body>
+  <a class="btn-nav" href="./index.html">Go back</a>
+
   <form class="form">
-    <label>
+    <label class="delay-label">
       Delay (ms)
-      <input type="number" name="delay" required />
+      <input class="input-delay" type="number" name="delay" required />
     </label>
 
     <fieldset>
       <legend>State</legend>
-      <label>
+      <label class="state-label">
         <input type="radio" name="state" value="fulfilled" required />
         Fulfilled
       </label>
-      <label>
+      <label class="state-label">
         <input type="radio" name="state" value="rejected" required />
         Rejected
       </label>
     </fieldset>
 
-    <button type="submit">Create notification</button>
+    <button class="create-btn" type="submit">Create notification</button>
   </form>
-  <script src="./js/2-snackbar.js" defer type="module"></script>
+
+  <script type="module" src="./js/2-snackbar.js"></script>
 </body>
 
 </html>
